--- a/pages/18602.html
+++ b/pages/18602.html
@@ -317,6 +317,8 @@ margin-left: 0em;
 <div class='hide'>
 <p><strong><a class='existingWikiWord' href='/nlab/show/AQFT'>algebraic quantum field theory</a></strong> (<a class='existingWikiWord' href='/nlab/show/perturbative+algebraic+quantum+field+theory'>perturbative</a>, <a class='existingWikiWord' href='/nlab/show/AQFT+on+curved+spacetimes'>on curved spacetimes</a>, <a class='existingWikiWord' href='/nlab/show/homotopical+algebraic+quantum+field+theory'>homotopical</a>)</p>
 
+<p><a class='existingWikiWord' href='/nlab/show/geometry+of+physics+--+A+first+idea+of+quantum+field+theory'>Introduction</a></p>
+
 <h2 id='concepts'>Concepts</h2>
 
 <p><strong><a class='existingWikiWord' href='/nlab/show/field+theory'>field theory</a></strong>: <a class='existingWikiWord' href='/nlab/show/classical+field+theory'>classical</a>, <a class='existingWikiWord' href='/nlab/show/prequantum+field+theory'>pre-quantum</a>, <a class='existingWikiWord' href='/nlab/show/quantum+field+theory'>quantum</a>, <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum</a></p>
@@ -393,7 +395,7 @@ margin-left: 0em;
 </li>
 </ul>
 
-<p><strong><a class='existingWikiWord' href='/nlab/show/quantum+mechanics'>quantum mechanical system</a></strong></p>
+<p><strong><a class='existingWikiWord' href='/nlab/show/quantum+mechanics'>quantum mechanical system</a></strong>, <strong><a class='existingWikiWord' href='/nlab/show/quantum+probability'>quantum probability</a></strong></p>
 
 <ul>
 <li>
@@ -453,11 +455,19 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/state+on+a+star-algebra'>state on a star-algebra</a>, <a class='existingWikiWord' href='/nlab/show/quantum+probability'>quantum probability</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/state+on+a+star-algebra'>state on a star-algebra</a>, <a class='existingWikiWord' href='/nlab/show/expectation+value'>expectation value</a></p>
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/pure+state'>pure state</a>, <a class='existingWikiWord' href='/nlab/show/pure+state'>mixed state</a>, <a class='existingWikiWord' href='/nlab/show/density+matrix'>density matrix</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/pure+state'>pure state</a></p>
+
+<p><a class='existingWikiWord' href='/nlab/show/space+of+states+%28in+geometric+quantization%29'>wave function</a></p>
+
+<p><a class='existingWikiWord' href='/nlab/show/wave+function+collapse'>collapse of the wave function</a>/<a class='existingWikiWord' href='/nlab/show/conditional+expectation'>conditional expectation value</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/pure+state'>mixed state</a>, <a class='existingWikiWord' href='/nlab/show/density+matrix'>density matrix</a></p>
 </li>
 
 <li>
@@ -1386,9 +1396,9 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#details'>Details</a></li><li><a href='#QuantumGravityCorrection'>Quantum gravity correction</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>In <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum field theory</a>, the <a class='existingWikiWord' href='/nlab/show/magnetic+dipole+moment'>magnetic moment</a> of <a class='existingWikiWord' href='/nlab/show/particle'>particles</a> as predicted by <a class='existingWikiWord' href='/nlab/show/classical+field+theory'>classical field theory</a> may receive corrections due to <a class='existingWikiWord' href='/nlab/show/quantum+mechanics'>quantum effects</a>. Such corrections are also called <em><a class='existingWikiWord' href='/nlab/show/quantum+anomaly'>quantum anomalies</a></em>, and hence one speaks of the <em>anomalous magnetic moments</em>, traditionally denoted by “<math class='maruku-mathml' display='inline' id='mathml_4d99e44eacf1a20f08491071c44efaeec7c46e28_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>g</mi><mo>−</mo><mn>2</mn></mrow><annotation encoding='application/x-tex'>g-2</annotation></semantics></math>”.</p>
+<p>In <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum field theory</a>, the <a class='existingWikiWord' href='/nlab/show/magnetic+dipole+moment'>magnetic moment</a> of <a class='existingWikiWord' href='/nlab/show/particle'>particles</a> as predicted by <a class='existingWikiWord' href='/nlab/show/classical+field+theory'>classical field theory</a> may receive corrections due to <a class='existingWikiWord' href='/nlab/show/quantum+mechanics'>quantum effects</a>. Such corrections are also called <em><a class='existingWikiWord' href='/nlab/show/quantum+anomaly'>quantum anomalies</a></em>, and hence one speaks of the <em>anomalous magnetic moments</em>, traditionally denoted by “<math class='maruku-mathml' display='inline' id='mathml_bcc2a3943cc429c15390375ebb6dce26a47ba7bb_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>g</mi><mo>−</mo><mn>2</mn></mrow><annotation encoding='application/x-tex'>g-2</annotation></semantics></math>”.</p>
 
-<p>The archetypical example is the anomalous magnetic moment of the <a class='existingWikiWord' href='/nlab/show/electron'>electron</a> in <a class='existingWikiWord' href='/nlab/show/quantum+electrodynamics'>quantum electrodynamics</a>, which is famous as the <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>pQFT</a>-prediction that matches <a class='existingWikiWord' href='/nlab/show/experimental+observation'>experiment</a> to an accuracy of about <math class='maruku-mathml' display='inline' id='mathml_4d99e44eacf1a20f08491071c44efaeec7c46e28_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mn>10</mn> <mrow><mo lspace='verythinmathspace' rspace='0em'>−</mo><mn>12</mn></mrow></msup></mrow><annotation encoding='application/x-tex'>10^{-12}</annotation></semantics></math> (e.g.<a href='#Scharf95'>Scharf 95, (3.10.20)</a>).</p>
+<p>The archetypical example is the anomalous magnetic moment of the <a class='existingWikiWord' href='/nlab/show/electron'>electron</a> in <a class='existingWikiWord' href='/nlab/show/quantum+electrodynamics'>quantum electrodynamics</a>, which is famous as the <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>pQFT</a>-prediction that matches <a class='existingWikiWord' href='/nlab/show/experimental+observation'>experiment</a> to an accuracy of about <math class='maruku-mathml' display='inline' id='mathml_bcc2a3943cc429c15390375ebb6dce26a47ba7bb_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mn>10</mn> <mrow><mo lspace='verythinmathspace' rspace='0em'>−</mo><mn>12</mn></mrow></msup></mrow><annotation encoding='application/x-tex'>10^{-12}</annotation></semantics></math> (e.g.<a href='#Scharf95'>Scharf 95, (3.10.20)</a>).</p>
 
 <p>Similarly there is the anomalous magenetic moment of the <a class='existingWikiWord' href='/nlab/show/muon'>muon</a> and the other <a class='existingWikiWord' href='/nlab/show/lepton'>leptons</a>.</p>
 
@@ -1400,7 +1410,7 @@ margin-left: 0em;
 
 <p>The further corrections of <a class='existingWikiWord' href='/nlab/show/loop+order'>1-loop</a> <a class='existingWikiWord' href='/nlab/show/quantum+gravity'>perturbative quantum gravity</a> to the anomalous magnetic moment of the <a class='existingWikiWord' href='/nlab/show/electron'>electron</a> and the <a class='existingWikiWord' href='/nlab/show/muon'>muon</a> have been computed in (<a href='#BerendsGastman75'>Berends-Gastman 75</a>) and found to be finite without need for <a class='existingWikiWord' href='/nlab/show/renormalization'>renormalization</a>. These <a class='existingWikiWord' href='/nlab/show/Feynman+diagram'>Feynman diagrams</a> contribute:</p>
 
-<p><img src='https://www.physicsforums.com/attachments/gravityvertexcorrectionsforqed-png.219804/'/></p>
+<p><img src='https://ncatlab.org/nlab/files/GravityVertexCorrectionsForQED.png' width='750'/></p>
 
 <h2 id='references'>References</h2>
 
@@ -1419,13 +1429,13 @@ margin-left: 0em;
 <p>Corrections at <a class='existingWikiWord' href='/nlab/show/loop+order'>1-loop</a> from <a class='existingWikiWord' href='/nlab/show/quantum+gravity'>quantum gravity</a> are discussed in</p>
 
 <ul>
-<li id='BerendsGastman75'>F. A. Berends, R. Gastmans, <em>Quantum gravity and the electron and muon anomalous magnetic moment</em>, Phys. Lett. B55 Issue 3 Feb 1975 311-312 (<a href='https://doi.org/10.1016/0370-2693(75'>doi:10.1016/0370-2693(75)90608-5</a>90608-5))</li>
+<li id='BerendsGastman75'>F. A. Berends, R. Gastmans, <em>Quantum gravity and the electron and muon anomalous magnetic moment</em>, Phys. Lett. B55 Issue 3 Feb 1975 311-312 (<a href='https://doi.org/10.1016/0370-2693(75'>doi:10.1016/0370-2693(75)90608-5</a>90608-5)</li>
 </ul>
 
 <p>This discussion is adapted to <a class='existingWikiWord' href='/nlab/show/supergravity'>supergravity</a> in</p>
 
 <ul>
-<li>F. del Aguila, A. Culatti, R. Munoz-Tapia, M. Perez-Victoria, <em>Supergravity corrections to <math class='maruku-mathml' display='inline' id='mathml_4d99e44eacf1a20f08491071c44efaeec7c46e28_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>g</mi><mo>−</mo><mn>2</mn><msub><mo stretchy='false'>)</mo> <mi>l</mi></msub></mrow><annotation encoding='application/x-tex'>(g-2)_l</annotation></semantics></math> in differential renormalization</em>, Nuclear Physics B 504 (1997) 532-550 (<a href='https://arxiv.org/abs/hep-ph/9702342'>arXiv:hep-ph/9702342</a>)</li>
+<li>F. del Aguila, A. Culatti, R. Munoz-Tapia, M. Perez-Victoria, <em>Supergravity corrections to <math class='maruku-mathml' display='inline' id='mathml_bcc2a3943cc429c15390375ebb6dce26a47ba7bb_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>g</mi><mo>−</mo><mn>2</mn><msub><mo stretchy='false'>)</mo> <mi>l</mi></msub></mrow><annotation encoding='application/x-tex'>(g-2)_l</annotation></semantics></math> in differential renormalization</em>, Nuclear Physics B 504 (1997) 532-550 (<a href='https://arxiv.org/abs/hep-ph/9702342'>arXiv:hep-ph/9702342</a>)</li>
 </ul>
 
 <p>See also</p>
@@ -1450,14 +1460,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on February  6, 2018 10:30:13 
+  Revised on February  8, 2018 06:33:29 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (195.229.110.1)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/anomalous+magnetic+moment" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/anomalous+magnetic+moment/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/anomalous+magnetic+moment" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/anomalous+magnetic+moment" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/anomalous+magnetic+moment" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/anomalous+magnetic+moment/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/anomalous+magnetic+moment" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/anomalous+magnetic+moment" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
