--- a/pages/18983.html
+++ b/pages/18983.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      Miklós Rédei in nLab
+      Stephen Summers in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      Miklós Rédei
+      Stephen Summers
   </h1>
 
 
@@ -309,16 +309,12 @@ margin-left: 0em;
 
 <div id="revision">
     <ul>
-<li><a href='http://personal.lse.ac.uk/redeim/'>webpage</a></li>
+<li><a href='https://people.clas.ufl.edu/sjs/'>webpage</a></li>
 </ul>
 
-<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_ea70455fb5093f5d5e3ef4558b3c8091ea682386_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
+<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_7fcba37130905f0b5e3cd9308ce55919e482975e_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
 
 <ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Stone-von+Neumann+theorem'>Schrödinger representation</a></p>
-</li>
-
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/quantum+probability'>quantum probability</a></p>
 </li>
@@ -333,28 +329,25 @@ margin-left: 0em;
 </ul>
 
 <p><div class='property'> category: <a class='category_link' href='/nlab/list/people'>people</a></div></p>
-
-<p>
-</p>
 </div>
 
 <div class="revisedby">
-  Revised on February  8, 2018 11:58:32 
+  Created on February  8, 2018 11:59:52 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (195.229.110.1)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Mikl%C3%B3s+R%C3%A9dei" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Mikl%C3%B3s+R%C3%A9dei/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Mikl%C3%B3s+R%C3%A9dei" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Mikl%C3%B3s+R%C3%A9dei" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Stephen+Summers" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/Mikl%C3%B3s+R%C3%A9dei" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/Stephen+Summers" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/Mikl%C3%B3s+R%C3%A9dei" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/Stephen+Summers" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/Mikl%C3%B3s+R%C3%A9dei" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/Stephen+Summers" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
