--- a/pages/18984.html
+++ b/pages/18984.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      Stanley Deser in nLab
+      Domenico Seminara in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      Stanley Deser
+      Domenico Seminara
   </h1>
 
 
@@ -309,57 +309,35 @@ margin-left: 0em;
 
 <div id="revision">
     <ul>
-<li><a href='http://en.wikipedia.org/wiki/Stanley_Deser'>Wikipedia entry</a></li>
+<li><a href='http://florencestringtheorygroup.weebly.com/domenico-seminara.html'>webpage</a></li>
 </ul>
 
-<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_d77871be1f0712e414a4ff49b731f97561764907_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
+<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_1a314714242a22a7583c2462a1786e63cc04a166_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
 
 <ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/positive+energy+theorem'>positive energy theorem</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/parent+action+functional'>parent action functional</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/quantum+gravity'>quantum gravity</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/3d+quantum+gravity'>3d quantum gravity</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/spinning+string'>spinning string</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/11-dimensional+supergravity'>11-dimensional supergravity</a></p>
-</li>
+<li><a class='existingWikiWord' href='/nlab/show/11-dimensional+supergravity'>11-dimensional supergravity</a></li>
 </ul>
 
 <p><div class='property'> category: <a class='category_link' href='/nlab/list/people'>people</a></div></p>
 </div>
 
 <div class="revisedby">
-  Revised on February  8, 2018 13:29:42 
+  Created on February  8, 2018 13:24:05 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (195.229.110.1)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Stanley+Deser" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Stanley+Deser/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Stanley+Deser" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Stanley+Deser" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Domenico+Seminara" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/Stanley+Deser" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/Domenico+Seminara" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/Stanley+Deser" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/Domenico+Seminara" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/Stanley+Deser" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/Domenico+Seminara" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
