--- a/pages/6393.html
+++ b/pages/6393.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -1361,7 +1361,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p>S. Deser,; B. Zumino, . <em>A complete action for the spinning string</em> Physics Letters B 65 (4): 369-373 (1976) (<a href='http://cdsweb.cern.ch/record/201648/files/CM-P00061857.pdf?version=1'>pdf</a>)</p>
+<p><a class='existingWikiWord' href='/nlab/show/Stanley+Deser'>Stanley Deser</a>, <a class='existingWikiWord' href='/nlab/show/Bruno+Zumino'>Bruno Zumino</a>, <em>A complete action for the spinning string</em> Physics Letters B 65 (4): 369-373 (1976) (<a href='http://cdsweb.cern.ch/record/201648/files/CM-P00061857.pdf?version=1'>pdf</a>)</p>
 </li>
 
 <li>
@@ -1420,7 +1420,7 @@ margin-left: 0em;
 <p>Discussion of the <a class='existingWikiWord' href='/nlab/show/BRST+complex'>BRST complex</a> of the NSR string is for instance in</p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/Jos%C3%A9+Figueroa-O%E2%80%99Farrill'>José Figueroa-O’Farrill</a>, Takashi Kimura, <em>The BRST cohomology of the NSR string: vanishing and “no-ghost” theorems</em> (<a href='http://www.maths.ed.ac.uk/~jmf/Research/PVBLICATIONS/nsr.pdf'>pdf</a>)</li>
+<li><a class='existingWikiWord' href='/nlab/show/Jos%C3%A9+Figueroa-O%E2%80%99Farrill'>José Figueroa-O&#39;Farrill</a>, Takashi Kimura, <em>The BRST cohomology of the NSR string: vanishing and “no-ghost” theorems</em> (<a href='http://www.maths.ed.ac.uk/~jmf/Research/PVBLICATIONS/nsr.pdf'>pdf</a>)</li>
 </ul>
 
 <p>
@@ -1500,14 +1500,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on January 11, 2017 08:07:37 
+  Revised on February  8, 2018 13:29:05 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (83.208.22.80)
+  (195.229.110.1)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/spinning+string" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/spinning+string/13" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(13 revisions)</span> | <a href="/nlab/show/diff/spinning+string" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/spinning+string" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/spinning+string" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/spinning+string/14" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(14 revisions)</span> | <a href="/nlab/show/diff/spinning+string" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/spinning+string" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
