--- a/pages/6771.html
+++ b/pages/6771.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://www.ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://www.ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -320,6 +320,8 @@ margin-left: 0em;
 
 <div class='hide'>
 <p><strong><a class='existingWikiWord' href='/nlab/show/AQFT'>algebraic quantum field theory</a></strong> (<a class='existingWikiWord' href='/nlab/show/perturbative+algebraic+quantum+field+theory'>perturbative</a>, <a class='existingWikiWord' href='/nlab/show/AQFT+on+curved+spacetimes'>on curved spacetimes</a>, <a class='existingWikiWord' href='/nlab/show/homotopical+algebraic+quantum+field+theory'>homotopical</a>)</p>
+
+<p><a class='existingWikiWord' href='/nlab/show/geometry+of+physics+--+A+first+idea+of+quantum+field+theory'>Introduction</a></p>
 
 <h2 id='concepts'>Concepts</h2>
 
@@ -397,7 +399,7 @@ margin-left: 0em;
 </li>
 </ul>
 
-<p><strong><a class='existingWikiWord' href='/nlab/show/quantum+mechanics'>quantum mechanical system</a></strong></p>
+<p><strong><a class='existingWikiWord' href='/nlab/show/quantum+mechanics'>quantum mechanical system</a></strong>, <strong><a class='existingWikiWord' href='/nlab/show/quantum+probability'>quantum probability</a></strong></p>
 
 <ul>
 <li>
@@ -457,11 +459,19 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/state+on+a+star-algebra'>state on a star-algebra</a>, <a class='existingWikiWord' href='/nlab/show/quantum+probability'>quantum probability</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/state+on+a+star-algebra'>state on a star-algebra</a>, <a class='existingWikiWord' href='/nlab/show/expectation+value'>expectation value</a></p>
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/pure+state'>pure state</a>, <a class='existingWikiWord' href='/nlab/show/pure+state'>mixed state</a>, <a class='existingWikiWord' href='/nlab/show/density+matrix'>density matrix</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/pure+state'>pure state</a></p>
+
+<p><a class='existingWikiWord' href='/nlab/show/space+of+states+%28in+geometric+quantization%29'>wave function</a></p>
+
+<p><a class='existingWikiWord' href='/nlab/show/wave+function+collapse'>collapse of the wave function</a>/<a class='existingWikiWord' href='/nlab/show/conditional+expectation'>conditional expectation value</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/pure+state'>mixed state</a>, <a class='existingWikiWord' href='/nlab/show/density+matrix'>density matrix</a></p>
 </li>
 
 <li>
@@ -643,7 +653,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/St%C3%BCckelberg-Petermann+renormalization+group'>interaction vertex redefinition</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/interaction+vertex+redefinition'>interaction vertex redefinition</a></p>
 </li>
 
 <li>
@@ -652,6 +662,28 @@ margin-left: 0em;
 
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/renormalization+group+flow'>renormalization group flow</a>/<a class='existingWikiWord' href='/nlab/show/renormalization+group+flow'>running coupling constants</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/effective+quantum+field+theory'>effective quantum field theory</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/effective+quantum+field+theory'>UV cutoff</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/counterterm'>counterterms</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/effective+action+functional'>relative effective action</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Polchinski%27s+flow+equation'>Wilsonian RG</a>, <a class='existingWikiWord' href='/nlab/show/Polchinski%27s+flow+equation'>Polchinski flow equation</a></p>
 </li>
 </ul>
 </li>
@@ -781,10 +813,18 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#references'>References</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#examples'>Examples</a><ul><li><a href='#for_yangmills_theory'>For Yang-Mills theory</a></li></ul></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
 <p>In statistical field theory and in <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum field theory</a>, what is called the <em>beta function</em> is the <a class='existingWikiWord' href='/nlab/show/logarithm'>logarithmic</a> <a class='existingWikiWord' href='/nlab/show/derivative'>derivative</a> of the <a class='existingWikiWord' href='/nlab/show/renormalization+group+flow'>running of the coupling constants</a> under <a class='existingWikiWord' href='/nlab/show/renormalization+group+flow'>renormalization group flow</a>. See there for more.</p>
+
+<h2 id='examples'>Examples</h2>
+
+<h3 id='for_yangmills_theory'>For Yang-Mills theory</h3>
+
+<p>In (<a href='#MetsaevTseytlin88'>Metsaev-Tseytlin 88</a>) the <a class='existingWikiWord' href='/nlab/show/loop+order'>1-loop</a> <a class='existingWikiWord' href='/nlab/show/beta+function'>beta function</a> for pure <a class='existingWikiWord' href='/nlab/show/Yang-Mills+theory'>Yang-Mills theory</a> was obtained as the point-particle limit of the <a class='existingWikiWord' href='/nlab/show/partition+function'>partition function</a> of a <a class='existingWikiWord' href='/nlab/show/bosonic+string'>bosonic</a> <a class='existingWikiWord' href='/nlab/show/string'>open string</a> in a Yang-Mills <a class='existingWikiWord' href='/nlab/show/background+field'>background field</a>. This provided a theoretical explanation for the observation, made earlier in (<a href='#Nepomechie83'>Nepomechie 83</a>) that when computed via <a class='existingWikiWord' href='/nlab/show/dimensional+regularization'>dimensional regularization</a> then this <a class='existingWikiWord' href='/nlab/show/beta+function'>beta function</a> coefficient of <a class='existingWikiWord' href='/nlab/show/Yang-Mills+theory'>Yang-Mills theory</a> vanishes in <a class='existingWikiWord' href='/nlab/show/spacetime'>spacetime</a> <a class='existingWikiWord' href='/nlab/show/dimension'>dimension</a> 26. This of course is the critical dimension of the <a class='existingWikiWord' href='/nlab/show/bosonic+string'>bosonic string</a>.</p>
+
+<p>For more on this see at <em><a class='existingWikiWord' href='/nlab/show/worldline+formalism'>worldline formalism</a></em></p>
 
 <h2 id='references'>References</h2>
 
@@ -794,7 +834,7 @@ margin-left: 0em;
 <li id='GellMannLow54'><a class='existingWikiWord' href='/nlab/show/Murray+Gell-Mann'>Murray Gell-Mann</a> and F. E. Low, <em>Quantum Electrodynamics at Small Distances</em>, Phys. Rev. 95 (5) (1954), 1300–1312 (<a href='http://www.fafnir.phyast.pitt.edu/py3765/GellManLow.pdf'>pdf</a>)</li>
 </ul>
 
-<p>there denoted “<math class='maruku-mathml' display='inline' id='mathml_0b08006e678a7e83250c483b8a04442f4d59de36_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ψ</mi></mrow><annotation encoding='application/x-tex'>\psi</annotation></semantics></math>”. The notation “<math class='maruku-mathml' display='inline' id='mathml_0b08006e678a7e83250c483b8a04442f4d59de36_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>β</mi></mrow><annotation encoding='application/x-tex'>\beta</annotation></semantics></math>” is due to</p>
+<p>there denoted “<math class='maruku-mathml' display='inline' id='mathml_4918313a0a8d9f2968f73ae811d1929987228266_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ψ</mi></mrow><annotation encoding='application/x-tex'>\psi</annotation></semantics></math>”. The notation “<math class='maruku-mathml' display='inline' id='mathml_4918313a0a8d9f2968f73ae811d1929987228266_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>β</mi></mrow><annotation encoding='application/x-tex'>\beta</annotation></semantics></math>” is due to</p>
 
 <ul>
 <li id='Callan70'>
@@ -818,6 +858,18 @@ margin-left: 0em;
 <li id='Duetsch18'><a class='existingWikiWord' href='/nlab/show/Michael+D%C3%BCtsch'>Michael Dütsch</a>, section 3.5.3 of <em><a class='existingWikiWord' href='/nlab/show/From+classical+field+theory+to+perturbative+quantum+field+theory'>From classical field theory to perturbative quantum field theory</a></em>, 2018</li>
 </ul>
 
+<p>Discussion for <a class='existingWikiWord' href='/nlab/show/Yang-Mills+theory'>Yang-Mills theory</a> includes</p>
+
+<ul>
+<li id='Nepomechie83'>
+<p>R.I. Nepomechie, <em>Remarks on quantized Yang-Mills theory in 26 dimensions</em>, Physics Letters B Volume 128, Issues 3–4, 25 August 1983, Pages 177-178 Phys. Lett. B128 (1983) 177 (<a href='https://doi.org/10.1016/0370-2693(83)90385-4'>doi:10.1016/0370-2693(83)90385-4</a>)</p>
+</li>
+
+<li id='MetsaevTseytlin88'>
+<p><a class='existingWikiWord' href='/nlab/show/Ruslan+Metsaev'>Ruslan Metsaev</a>, <a class='existingWikiWord' href='/nlab/show/Arkady+Tseytlin'>Arkady Tseytlin</a>, <em>On loop corrections to string theory effective actions</em>, Nuclear Physics B Volume 298, Issue 1, 29 February 1988, Pages 109-132 (<a href='https://doi.org/10.1016/0550-3213(88)90306-9'>doi:10.1016/0550-3213(88)90306-9</a>)</p>
+</li>
+</ul>
+
 <p>
 </p>
 
@@ -827,14 +879,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on January 29, 2018 14:45:21 
+  Revised on February 10, 2018 08:54:20 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (62.168.44.102)
+  (195.229.110.1)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/beta+function" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/beta+function/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/beta+function" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/beta+function" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/beta+function" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/beta+function/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/beta+function" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/beta+function" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
